NIFI-12556 Updated nifi-cipher-bundle using current API methods
This closes #8195

Signed-off-by: David Handermann <exceptionfactory@apache.org>